<resources>
    <string name="app_name">EvaluationApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="survey">Survey</string>
    <string name="result">Result</string>
    <string name="posterSurvey">Poster Evaluation Survey</string>
    <string name="poor">Poor</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="veryGood">Very Good</string>
    <string name="superior">Superior</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="finish">finish</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="createAccount">Create New Account</string>
    <string name="login">Login</string>
    <string name="com_auth0_domain">dev-9glxzlwm.us.auth0.com</string>
    <string name="com_auth0_client_id">YQIIAQIYXOJ8t7aXeR362GZdMMnIfkzI</string>
</resources>